added .decode('utf-8') to th e when hashing password

--- a/templates/login.html
+++ b/templates/login.html
@@ -186,6 +186,7 @@
       </label>
     </div>
     <a href ='{{url_for("register")}}'>Don't have an account</a>
+    <a  style="margin-left: 50px"   href="{{url_for('home_page')}}">Back to Home page</a>
     <button class="btn btn-primary w-100 py-2" type="submit"> {{form.submit_in.label}} </button>
     <!-- <p class="mt-5 mb-3 text-body-secondary">&copy; emma 2025</p> -->
   </form>
