--- a/templates/signup.html
+++ b/templates/signup.html
@@ -198,7 +198,9 @@
       </label>
     </div>
     <a href ='{{url_for("login_page")}}'>Already have an account?</a>
+    <a  style="margin-left: 50px"   href="{{url_for('home_page')}}">Back to Home page</a>
     <button class="btn btn-primary w-100 py-2" type="submit"> {{form.submit_up.label}} </button>
+    
     <p class="mt-5 mb-3 text-body-secondary">&copy;emma 2025</p>
   </form>
 </main>
